--- a/app/views/trackers/index.html.erb
+++ b/app/views/trackers/index.html.erb
@@ -7,5 +7,5 @@
 <p>
   <%= link_to 'neue Exception', new_tracker_path %>
   <br>
-  <%= link_to 'Exceptions anzeigen', show_tracker_path %>
+  <%= link_to 'Exceptions anzeigen', tracker_path %>
 
