--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
   <h1>Mongo ExTracker</h1>
-<%= yield %>
-
+  <h4>MongoDB based exception tracker</h4>
+  <div id="content">
+    <%= yield %>
+  </div>
 </body>
 </html>
