--- a/app/views/trackers/index.html.erb
+++ b/app/views/trackers/index.html.erb
@@ -1,11 +1,9 @@
-<p>MongoDB based exception tracker</p>
-
 <p>
   <%= flash[:notice] if flash && flash[:notice].present? %>
 </p>
 
 <p>
-  <%= link_to 'neue Exception', new_tracker_path %>
+  <%= link_to 'New Exception', new_tracker_path %>
   <br>
-  <%= link_to 'Exceptions anzeigen', tracker_path %>
+  <%= link_to 'Show Exceptions', tracker_path %>
 
